# TrabalhoDSP2026.1

./: .gitignore  Divisão_de_Tarefas.txt  carga_inicial.py  database.py  main.py  pyproject.toml  schemas.py
rotas/: exportacao.py  hash.py  itens.py
